@startuml

title __CONTROLLER's Class Diagram__\n

  namespace com.kate_chaus.art_orders {
    namespace controller {
      class com.kate_chaus.art_orders.controller.ControllerUtil {
          {static} ~ getErrors()
      }
    }
  }
  

  namespace com.kate_chaus.art_orders {
    namespace controller {
      class com.kate_chaus.art_orders.controller.MainController {
          - uploadPath : String
          + add()
          + main()
          + updateMessage()
          + userMessages()
          - saveFile()
      }
    }
  }
  

  namespace com.kate_chaus.art_orders {
    namespace controller {
      class com.kate_chaus.art_orders.controller.OrderApplicationController {
          - uploadPath : String
          + Update()
          + apply()
          + changeOrderStatus()
          + editApplication()
          + getApplication()
          + getArtistOrders()
          + getCustomerOrders()
          + newArtistApplication()
          + newArtistApplicationForm()
          + newCustomerApplication()
          + newCustomerApplicationForm()
          - saveFile()
      }
    }
  }
  

  namespace com.kate_chaus.art_orders {
    namespace controller {
      class com.kate_chaus.art_orders.controller.RegistrationController {
          + addUser()
          + registration()
      }
    }
  }
  

  namespace com.kate_chaus.art_orders {
    namespace controller {
      class com.kate_chaus.art_orders.controller.SearchController {
          + getSettings()
      }
    }
  }
  

  namespace com.kate_chaus.art_orders {
    namespace controller {
      class com.kate_chaus.art_orders.controller.SettingsController {
          - passwordEncoder : PasswordEncoder
          - uploadPath : String
          + addSite()
          + changeAvatar()
          + changeStatus()
          + deleteSite()
          + getSettings()
          + setSettings()
          - saveFile()
      }
    }
  }
  

  namespace com.kate_chaus.art_orders {
    namespace controller {
      class com.kate_chaus.art_orders.controller.UserController {
          + getSettings()
          + profile()
          + subscribe()
          + unsubscribe()
          + updateSettings()
          + userEditForm()
          + userList()
          + userList()
          + userSave()
          ~ getCustomerOrders()
          ~ getOrders()
          ~ getSubscriptions()
      }
    }
  }
  

  com.kate_chaus.art_orders.controller.MainController o-- com.kate_chaus.art_orders.repos.MessageRepo : messageRepo
  com.kate_chaus.art_orders.controller.MainController o-- com.kate_chaus.art_orders.repos.OrderRepo : orderRepo
  com.kate_chaus.art_orders.controller.OrderApplicationController o-- com.kate_chaus.art_orders.repos.OrderApplicationRepo : orderApplicationRepo
  com.kate_chaus.art_orders.controller.OrderApplicationController o-- com.kate_chaus.art_orders.repos.OrderRepo : orderRepo
  com.kate_chaus.art_orders.controller.OrderApplicationController o-- com.kate_chaus.art_orders.repos.UserRepo : userRepo
  com.kate_chaus.art_orders.controller.RegistrationController o-- com.kate_chaus.art_orders.service.UserService : userService
  com.kate_chaus.art_orders.controller.SearchController o-- com.kate_chaus.art_orders.repos.OrderApplicationRepo : orderApplicationRepo
  com.kate_chaus.art_orders.controller.SettingsController o-- com.kate_chaus.art_orders.repos.SiteRepo : siteRepo
  com.kate_chaus.art_orders.controller.SettingsController o-- com.kate_chaus.art_orders.repos.UserRepo : userRepo
  com.kate_chaus.art_orders.controller.UserController o-- com.kate_chaus.art_orders.repos.OrderRepo : orderRepo
  com.kate_chaus.art_orders.controller.UserController o-- com.kate_chaus.art_orders.service.UserService : userService


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
